# Black-Hole-Simulator

./: CMakeLists.txt  README.md
src/: main.cpp
src/shaders/: shader.frag  shader.vert
src/utils/: Camera.h  Shader.h
